--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,10 +20,10 @@ environment:
       PHP_VER: 8.2.1
       NATIVE: AVX
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      VS_BUILD: vc15
+      VS_BUILD: vs16
       PHP_VER: 8.1.14
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      VS_BUILD: vc15
+      VS_BUILD: vs16
       PHP_VER: 7.4.33
 
 build_script:
