--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,14 +17,14 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       VS_BUILD: vs16
-      PHP_VER: 7.4.33
+      PHP_VER: 8.2.13
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       VS_BUILD: vs16
-      PHP_VER: 8.0.26
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      VS_BUILD: vs16
-      PHP_VER: 8.1.14
-      NATIVE: AVX
+      PHP_VER: 8.3.0
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    #   VS_BUILD: vs16
+    #   PHP_VER: 8.2.0
+    #   NATIVE: AVX
 
 build_script:
   - win\build.bat
